log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: log-claim
      containers:
        - name: log-output
          image: log-output
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /app/files
        - name: log-reader
          image: log-reader
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /app/files
